# proj306-microkernel

./: .gitmodules  README.md  justfile
antimono/: Cargo.toml  OSDK.toml  README.md  expand.rs  justfile  log  rust-toolchain.toml
antimono/.metals/: metals.mv.db
antimono/am-object/: Cargo.toml
antimono/am-object/src/: error.rs  lib.rs  object.rs
antimono/am-object/src/object/: handle.rs  rights.rs
antimono/asm/: user.asm
antimono/crates/anti-frame/: Cargo.toml
antimono/crates/anti-frame/src/: boot.rs  lib.rs  panicking.rs
antimono/crates/anti-frame/src/arch/: x86.rs
antimono/crates/anti-frame/src/arch/x86/: boot.rs
antimono/crates/anti-frame/src/vm/: kspace.rs  mod.rs  space.rs
antimono/crates/anti-frame/src/vm/page_table/: cursor.rs  mod.rs
antimono/crates/anti-main/: Cargo.toml
antimono/crates/anti-rights/: Cargo.toml
antimono/crates/anti-util/: Cargo.toml
antimono/crates/anti-util/src/: dup.rs  safe_ptr.rs
antimono/crates/sel4/: Cargo.toml
antimono/crates/sel4/config/data/src/: lib.rs
antimono/crates/sel4/config/src/: lib.rs
antimono/crates/sel4/sys/: Cargo.toml
antimono/crates/sel4/sys/src/: bf.rs  bindings.rs  c.rs  invocation_labels.rs  invocations.rs  invocations_mod.rs  types.rs
antimono/crates/sel4/sys/src/syscalls/: mod.rs  syscall_ids.rs
antimono/crates/typeflags/: Cargo.toml
antimono/csel4/: Cargo.toml  build.rs  cbindgen.toml
antimono/csel4/src/: lib.rs
antimono/ember/: Cargo.toml
antimono/ember/src/: boot_info.rs  error.rs  lib.rs  loader.rs  mm.rs  object.rs  vspace.rs
antimono/ember/src/boot/: mod.rs  root_server.rs  utils.rs
antimono/ember/src/common/: bit_field.rs  mod.rs  raw.rs  region.rs
antimono/ember/src/cspace/: mod.rs
antimono/ember/src/cspace/cap/: mod.rs
antimono/ember/src/cspace/capability/: mod.rs
antimono/ember/src/cspace/raw/: cte.rs  mdb.rs  mod.rs
antimono/ember/src/interrupt/: handler.rs
antimono/ember/src/process/: mod.rs  process_builder.rs
antimono/ember/src/process/process_vm/: heap.rs  mod.rs
antimono/ember/src/process/process_vm/init_stack/: mod.rs
antimono/ember/src/process/sel4_thread/: mod.rs  sel4_thread_ext.rs
antimono/ember/src/root_server/: mod.rs
antimono/ember/src/root_server/elf/: elf_file.rs  load_elf.rs  mod.rs
antimono/ember/src/sched/: mod.rs
antimono/ember/src/sel4/: cnode.rs  mod.rs  register.rs  tcb.rs
antimono/ember/src/sel4/boot/: mod.rs
antimono/ember/src/sel4/common/: mod.rs
antimono/ember/src/sel4/cspace/: cte.rs  mdb.rs  mod.rs
antimono/ember/src/sel4/structures/: mod.rs
antimono/ember/src/sel4/structures/cspace/: mdb.rs  (+2 more)
antimono/ember/src/sel4/thread/: mod.rs
antimono/ember/src/sel4/utils/: macros.rs  mod.rs
antimono/ember/src/sel4/vspace/: mod.rs
antimono/ember/src/syscall/: mod.rs
antimono/ember/src/syscall/sel4_syscalls/: mod.rs
antimono/ember/src/thread/: exception.rs  kernel_thread.rs  mod.rs  state.rs  status.rs  task.rs  thread_table.rs  user.rs
antimono/ember/src/thread/raw/: mod.rs
antimono/ember/src/utils/: macros.rs  mod.rs
antimono/ember/src/vm/: mod.rs
antimono/ember/src/vm/vmar/: mod.rs  vm_mapping.rs
antimono/ember/src/vm/vmo/: dyn_cap.rs  mod.rs  pager.rs  static_cap.rs
antimono/ember/src/vspace/: mod.rs  structures.rs
antimono/images/: capabilities-image-x86_64-pc99  hello  root_task
antimono/rootserver/: hello  hello-att.S  hello-bin  hello.S
antimono/seL4-raw/: Cargo.toml
antimono/seL4-raw/src/: config.rs  lib.rs  object.rs  structures.rs
antimono/seL4-raw/src/object/: cnode.rs  untyped.rs
antimono/seL4-raw/src/structures/: cap.rs
antimono/sel4/: Cargo.toml
antimono/sel4-core-raw/: Cargo.toml
antimono/sel4-core-raw/src/: boot.rs  cspace.rs  error.rs  exception.rs  interrupt.rs  lib.rs  loader.rs  machine.rs  mem.rs  object.rs  root_server.rs  structures.rs  syscall.rs
antimono/sel4-core-raw/src/boot/: mm.rs  root_server.rs  untyped.rs  utils.rs
antimono/sel4-core-raw/src/common/: fault.rs  object.rs  sel4_config.rs  structures.rs
antimono/sel4-core-raw/src/cspace/: compatibility.rs  mdb.rs
antimono/sel4-core-raw/src/kernel/: c_traps.rs  fastpath.rs
antimono/sel4-core-raw/src/object/: arch.rs  cnode.rs
antimono/sel4-core-raw/src/syscall/invocation/: decode.rs  invoke_mmu_op.rs  invoke_untyped.rs
antimono/sel4-core-raw/src/task_manager/: scheduler.rs
antimono/sel4-core-raw/src/types/: bindings.rs  bitfield.rs
antimono/sel4-core-raw/src/vspace/: asid.rs  interface.rs  pte.rs
antimono/sel4-install/: Cargo.toml
antimono/sel4-install/src/: main.rs
antimono/sel4/src/: lib.rs  model.rs  object.rs  structures.rs  syscall.rs  types.rs
antimono/sel4/src/structures/: cap.rs
antimono/sel4/src/syscall/: calls.rs  syscall_ids.rs
antimono/src/: api.rs  arch.rs  generated.rs  lib.rs  object.rs  structs.rs
antimono/src/arch/: x86.rs
antimono/src/object/: cap.rs  structures.rs
antimono/usertest/: Cargo.toml
antimonox/ember/: Cargo.toml
antimonox/ember/src/: c_api.rs  common.rs  config.rs  sched.rs  utils.rs  vspace.rs
antimonox/ember/src/boot/: root_server.rs
antimonox/ember/src/common/: sel4_config.rs
antimonox/ember/src/cspace/: cap.rs  cte.rs  deps.rs
antimonox/ember/src/interrupt/: handler.rs
antimonox/ember/src/process/process_vm/: mod.rs
antimonox/ember/src/process/program_loader/: mod.rs  shebang.rs
antimonox/ember/src/process/sel4_thread/: sel4_thread_ext.rs
antimonox/ember/src/sel4/: mod.rs
antimonox/ember/src/sel4/boot/: mod.rs
antimonox/ember/src/sel4/cspace/: cte.rs  mod.rs
antimonox/ember/src/sel4/utils/: macros.rs  mod.rs
antimonox/ember/src/sel4/vspace/: mod.rs
antimonox/ember/src/syscall/: invocation.rs  mod.rs  utils.rs
antimonox/ember/src/syscall/invocation/: decode.rs  invoke_cnode.rs
antimonox/ember/src/task_manager/: tcb.rs
antimonox/ember/src/thread/: mod.rs  task.rs
antimonox/ember/src/vm/: page_fault_handler.rs  perms.rs
antimonox/ember/src/vm/vmar/: options.rs  static_cap.rs  vm_mapping.rs
antimonox/ember/src/vm/vmo/: options.rs
antimonox/ember/src/vspace/: interface.rs  vm_rights.rs
(+45 files in other folders)
