[package]
name = "ember"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aster-frame = { path = "../../asterinas/framework/aster-frame" }
ktest = { path = "../../asterinas/framework/libs/ktest" }
log = "0.4"
sel4 = { path = "../crates/sel4" }
sel4-bitfield-ops = { path = "../crates/sel4/bitfield-ops" }
intrusive-collections = "0.9"
num_enum = { version = "0.7", default-features = false }
thiserror = { version = "1.0", package = "thiserror-core", default-features = false }