[package]
name = "sel4-core-raw"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
spin = "0.9"
xmas-elf = "0.9"
# align_ext = { path = "../../asterinas/framework/libs/align_ext" }

# [dependencies.aster-frame]
# path = "../../asterinas/framework/aster-frame"

# [dependencies.ktest]
# path = "../../asterinas/framework/libs/ktest"

[features]
ENABLE_SMP = []
ENABLE_UINTC = []