[package]
name = "sel4-core-raw"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
spin = "0.9"
xmas-elf = "0.9"
anti-frame = {path = "../crates/anti-frame"}
align-ext = { path = "../crates/align-ext" }


[features]
ENABLE_SMP = []
ENABLE_UINTC = []