[package]
name = "sel4"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
downcast-rs = { version = "1.2.0", default-features = false }
bitflags = "2.5.0"
bitfield = "0.15.0"

[dependencies.aster-frame]
path = "../../asterinas/framework/aster-frame"

[dependencies.ktest]
path = "../../asterinas/framework/libs/ktest"